# Seigbrain

./: .imageprocesser.cpp.kate-swp  .intellgence.cpp.kate-swp  .layer.h.kate-swp  .main.cpp.kate-swp  .network.cpp.kate-swp  .network.h.kate-swp  .neuron.cpp.kate-swp  CMakeLists.txt  README.md  Seigbrain.kdev4  imageprocesser.cpp  imageprocesser.h  intellgence.cpp  intellgence.h  intelligence.cpp  intelligence.h  layer.cpp  layer.h  main.cpp  my_math.c  my_math.cpp  my_math.h  network.cpp  network.h  neuron.cpp  neuron.h  nueron.h
.kdev4/: Seigbrain.kdev4
data/: correct answers.txt
